--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,7 @@
-PORT = 8080
-MONGO_URI = mongodb://ddoga:wntjdwls12@15.164.161.145:27017/ddoga
+PORT =8080
+MONGO_URI =mongodb://ddoga:wntjdwls12@15.164.161.145:27017/ddoga
+REACT_APP_NAVERMAP_API_KEY_ID=8cutfsqvlm
+REACT_APP_NAVERMAP_API_KEY=Vi8W9KmoE9Q2taqnRgrDn2Urk6oJXYNe0r5tQPXU
+
+
+
