--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "mongoose-sequence": "^5.3.1",
